# 2.03.01 (57896) Oct 23, 2011
Ramp Forces and Motion Basics: Fixed: Mystery object can get stuck in the game tab
# 2.03.00 (57799) Oct 19, 2011
# 2.02.04 (57743) Oct 19, 2011
Make sure all non-sum forces always appear in the FBD, see #3054
> Fixed: Sum of forces vector should disappear from FBD when unchecked, see #3054
> Fixed: Friction vector doesn't disappear on "reset all", see #3054
> Fixed: "brick/bouncy" not played back during playback, see #3054
Removed unnecessary versions of Predef. since there is a workaround for good code red problem: http://devnet.jetbrains.net/message/5322592#5322592
# 2.02.03 (57640) Oct 14, 2011
Ramp Forces and Motion Basics: Begin with "ice" as the default setting
Ramp Forces and Motion Basics: Use full words instead of abbreviations for forces
Ramp Forces and Motion Basics: Made all objects have a coefficient of static and kinetic friction of 0.5
Ramp Forces and Motion Basics: Removed "friction" and "force graph" tabs
Ramp Forces and Motion Basics: Created new flavor
# 2.02.02 (56528) Sep 13, 2011
Forces and Motion Basics: Use complete words like Ffriction instead of abbreviations like Ff
Forces and Motion Basics: Use "total" instead of "sum" for force
Forces and Motion Basics: Use "push" instead of "applied" for force
# 2.02.01 (56467) Sep 13, 2011
Forces and Motion Basics: Ensure static friction coefficient always equals kinetic friction coefficient
Forces and Motion Basics: Don't show gravity and normal force arrows by default
Forces and Motion Basics: Wired up control for gravity and normal force arrows
Forces and Motion Basics: Added a control for gravity and normal force arrows, not wired up yet
Forces and Motion Basics: Removed the free body diagram on/off control box
Forces and Motion Basics: Include only one friction slider in friction tab which sets both kinetic and static friction
Forces and Motion Basics: Give object mass in kg only (take out friction information from drop down menu)